Fix some layout issues in new front end

--- a/edx-platform/uamx-theme/lms/static/sass/partials/lms/theme/_uamx.scss
+++ b/edx-platform/uamx-theme/lms/static/sass/partials/lms/theme/_uamx.scss
@@ -10,12 +10,21 @@
     padding: 0 20px;
   }
 
+  .highlighted-courses .courses {
+    float: none;
+    margin-bottom: 20px;
+  }
+
   h5.uamx_index-smalltitles {
     margin-left: 5%;
   }
 
   .courses-container .courses-more {
     text-align: left;
+    margin-left: 5%;
+    margin-top: 40px;
+    font-size: 14px;
+    text-decoration: underline;
   }
 }
 
@@ -97,6 +106,32 @@ a.uamx_carousel-control {
   }
 }
 
+.uamx_index-search {
+
+  padding-top: 1em;
+  background-color: theme-color("info");
+
+  label {
+    text-shadow: none;
+    font: inherit;
+    color: #ffff;
+    margin-bottom: 17px;
+  }
+
+  input, .uamx_index-search-append {
+    box-shadow: none;
+    height: 30px;
+  }
+
+  button.uamx_index-search-append {
+    background: lightgray;
+
+    &:active, &:hover {
+      box-shadow: inset 0 0 20px 0 rgba(0, 3, 0, 0.35);
+    }
+  }
+}
+
 /** footer.html **/
 
 .uamx_footer {
@@ -119,7 +154,52 @@ a.uamx_carousel-control {
 }
 
 /** navbar-not-authenticated.html **/
-.uamx_header-navbar-not-authenticated {
+.global-header .nav-links.uamx_header-navbar-not-authenticated {
+
+  .main {
+
+    margin-top: 0;
+    position: absolute;
+    left: 80px;
+    
+    .nav-item {
+
+      margin: 0;
+
+      a {
+        color: theme-color("primary");
+        display: block;
+        height: 73px;
+        padding: 20px 1em;
+
+        &:hover {
+          background: theme-color("primary");
+          color: #fff;
+        }
+
+        &::after {
+          display: inline-block;
+          width: 0;
+          height: 0;
+          margin-left: .255em;
+          vertical-align: .255em;
+          content: "";
+          border-top: .3em solid;
+          border-right: .3em solid transparent;
+          border-bottom: 0;
+          border-left: .3em solid transparent;
+
+        }
+      }
+      
+      @media (max-width: 991px) {
+        a::after {
+          display: none;
+        }
+      }
+
+    }
+  }
   
   .uamx_header-dropdownmenu {
     position: absolute;
@@ -127,13 +207,42 @@ a.uamx_carousel-control {
     background: white;
     box-shadow: 0px 1px 1px #646464;
     z-index: 99999;
+    min-width: 700px;
+    display: none;
 
-    h6 { 
+    &.active {
+      display: block;
+    }
+
+    hr {
+      height: 1px;
+      background: theme-colors("secondary");
+    }
+
+    h5 { 
       padding: 1em 1em 0em;
+      text-transform: none;
+    }
+
+    h6 {
+      margin: 0.5rem 0 0 0;
     }
     
     .row {
       padding: 0em 1em 2em;
+    }
+
+    a {
+      color: theme-color("primary");
+
+      &:hover {
+        color: theme-color("primary");
+        font-weight: bold;
+      }
+    }
+
+    .uamx_header-dropdownmenu-list {
+      font-size: 0.9;
     }
   }
 
@@ -188,7 +297,15 @@ a.uamx_carousel-control {
   background-size: cover;
   background-position: center;
   width: 100%;
-  min-height: 200px;
+  min-height: 300px;
+
+  .uamx_banner-top-text {
+    padding: 2em 0 0 2em;
+
+    p {
+      color: theme-color("primary");
+    }
+  }
 }
 
 /** header/navbar-logo-header.html **/
